@@ -2,6 +2,7 @@ package stud.ntnu.krisefikser.article.service;
 
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import stud.ntnu.krisefikser.article.dto.ArticleRequest;
@@ -10,10 +11,6 @@ import stud.ntnu.krisefikser.article.entity.Article;
 import stud.ntnu.krisefikser.article.exception.ArticleNotFoundException;
 import stud.ntnu.krisefikser.article.repository.ArticleRepository;
 
-/**
- * Service class for managing articles. This class provides methods to create, read, update, and
- * delete articles.
- */
 @Service
 @RequiredArgsConstructor
 public class ArticleService {
@@ -23,38 +20,15 @@ public class ArticleService {
   public List<ArticleResponse> getAllArticles() {
     return articleRepository.findAll().stream()
         .map(this::convertToDto)
-        .toList();
+        .collect(Collectors.toList());
   }
 
-  private ArticleResponse convertToDto(Article article) {
-    return ArticleResponse.builder()
-        .id(article.getId())
-        .title(article.getTitle())
-        .text(article.getText())
-        .createdAt(article.getCreatedAt())
-        .imageUrl(article.getImageUrl())
-        .build();
-  }
-
-  /**
-   * Retrieves an article by its ID.
-   *
-   * @param id the ID of the article
-   * @return the article response
-   * @throws ArticleNotFoundException if the article with the given ID does not exist
-   */
   public ArticleResponse getArticleById(Long id) {
     Article article = articleRepository.findById(id)
         .orElseThrow(() -> new ArticleNotFoundException("Article not found with id: " + id));
     return convertToDto(article);
   }
 
-  /**
-   * Creates a new article.
-   *
-   * @param articleRequest the article data
-   * @return the created article response
-   */
   public ArticleResponse createArticle(ArticleRequest articleRequest) {
     Article article = Article.builder()
         .title(articleRequest.getTitle())
@@ -67,14 +41,6 @@ public class ArticleService {
     return convertToDto(savedArticle);
   }
 
-  /**
-   * Updates an existing article.
-   *
-   * @param id             the ID of the article to update
-   * @param articleRequest the new article data
-   * @return the updated article response
-   * @throws ArticleNotFoundException if the article with the given ID does not exist
-   */
   public ArticleResponse updateArticle(Long id, ArticleRequest articleRequest) {
     Article existingArticle = articleRepository.findById(id)
         .orElseThrow(() -> new ArticleNotFoundException("Article not found with id: " + id));
@@ -87,16 +53,20 @@ public class ArticleService {
     return convertToDto(updatedArticle);
   }
 
-  /**
-   * Deletes an article by its ID.
-   *
-   * @param id the ID of the article to delete
-   * @throws ArticleNotFoundException if the article with the given ID does not exist
-   */
   public void deleteArticle(Long id) {
     if (!articleRepository.existsById(id)) {
       throw new ArticleNotFoundException("Article not found with id: " + id);
     }
     articleRepository.deleteById(id);
+  }
+
+  private ArticleResponse convertToDto(Article article) {
+    return ArticleResponse.builder()
+        .id(article.getId())
+        .title(article.getTitle())
+        .text(article.getText())
+        .createdAt(article.getCreatedAt())
+        .imageUrl(article.getImageUrl())
+        .build();
   }
 }
