@@ -11,8 +11,8 @@ import static org.springframework.test.web.servlet.request.MockMvcRequestBuilder
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.content;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
-
 import com.fasterxml.jackson.databind.ObjectMapper;
+import java.util.Arrays;
 import java.util.List;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -27,10 +27,8 @@ import org.springframework.test.web.servlet.MockMvc;
 import stud.ntnu.krisefikser.auth.service.CustomUserDetailsService;
 import stud.ntnu.krisefikser.auth.service.TokenService;
 import stud.ntnu.krisefikser.common.TestSecurityConfig;
-import stud.ntnu.krisefikser.map.dto.MapPointRequest;
-import stud.ntnu.krisefikser.map.dto.MapPointResponse;
-import stud.ntnu.krisefikser.map.dto.MapPointTypeResponse;
-import stud.ntnu.krisefikser.map.dto.UpdateMapPointRequest;
+import stud.ntnu.krisefikser.map.entity.MapPoint;
+import stud.ntnu.krisefikser.map.entity.MapPointType;
 import stud.ntnu.krisefikser.map.service.MapPointService;
 import stud.ntnu.krisefikser.map.service.MapPointTypeService;
 
@@ -56,15 +54,13 @@ class MapPointControllerTest {
   @Autowired
   private ObjectMapper objectMapper;
 
-  private MapPointTypeResponse testMapPointTypeResponse;
-  private MapPointResponse testMapPointResponse;
-  private MapPointRequest testMapPointRequest;
-  private UpdateMapPointRequest testUpdateMapPointRequest;
-  private List<MapPointResponse> testMapPointResponses;
+  private MapPoint testMapPoint;
+  private MapPointType testMapPointType;
+  private List<MapPoint> testMapPoints;
 
   @BeforeEach
   void setUp() {
-    testMapPointTypeResponse = MapPointTypeResponse.builder()
+    testMapPointType = MapPointType.builder()
         .id(1L)
         .title("Test Point Type")
         .iconUrl("http://example.com/icon.png")
@@ -72,67 +68,54 @@ class MapPointControllerTest {
         .openingTime("9:00-17:00")
         .build();
 
-    testMapPointResponse = MapPointResponse.builder()
+    testMapPoint = MapPoint.builder()
         .id(1L)
         .latitude(63.4305)
         .longitude(10.3951)
-        .type(testMapPointTypeResponse)
+        .type(testMapPointType)
         .build();
 
-    testMapPointRequest = MapPointRequest.builder()
-        .latitude(63.4305)
-        .longitude(10.3951)
-        .typeId(1L)
-        .build();
-
-    testUpdateMapPointRequest = UpdateMapPointRequest.builder()
-        .latitude(63.4305)
-        .longitude(10.3951)
-        .typeId(1L)
-        .build();
-
-    testMapPointResponses = List.of(testMapPointResponse);
+    testMapPoints = Arrays.asList(testMapPoint);
   }
 
   @Test
   void getAllMapPoints_ShouldReturnList() throws Exception {
-    when(mapPointService.getAllMapPoints()).thenReturn(testMapPointResponses);
+    when(mapPointService.getAllMapPoints()).thenReturn(testMapPoints);
 
     mockMvc.perform(get("/api/map-points"))
         .andExpect(status().isOk())
         .andExpect(content().contentType(MediaType.APPLICATION_JSON))
-        .andExpect(jsonPath("$[0].id").value(testMapPointResponse.getId()))
-        .andExpect(jsonPath("$[0].latitude").value(testMapPointResponse.getLatitude()))
-        .andExpect(jsonPath("$[0].longitude").value(testMapPointResponse.getLongitude()));
+        .andExpect(jsonPath("$[0].id").value(testMapPoint.getId()))
+        .andExpect(jsonPath("$[0].latitude").value(testMapPoint.getLatitude()))
+        .andExpect(jsonPath("$[0].longitude").value(testMapPoint.getLongitude()));
   }
 
   @Test
   void getMapPointById_ShouldReturnMapPoint() throws Exception {
-    when(mapPointService.getMapPointById(1L)).thenReturn(testMapPointResponse);
+    when(mapPointService.getMapPointById(1L)).thenReturn(testMapPoint);
 
     mockMvc.perform(get("/api/map-points/1"))
         .andExpect(status().isOk())
         .andExpect(content().contentType(MediaType.APPLICATION_JSON))
-        .andExpect(jsonPath("$.id").value(testMapPointResponse.getId()))
-        .andExpect(jsonPath("$.latitude").value(testMapPointResponse.getLatitude()))
-        .andExpect(jsonPath("$.longitude").value(testMapPointResponse.getLongitude()));
+        .andExpect(jsonPath("$.id").value(testMapPoint.getId()))
+        .andExpect(jsonPath("$.latitude").value(testMapPoint.getLatitude()))
+        .andExpect(jsonPath("$.longitude").value(testMapPoint.getLongitude()));
   }
 
   @Test
   @WithMockUser(roles = "ADMIN")
   void createMapPoint_WithAdminRole_ShouldCreateAndReturnMapPoint() throws Exception {
-    when(mapPointService.createMapPoint(any(MapPointRequest.class))).thenReturn(
-        testMapPointResponse);
+    when(mapPointService.createMapPoint(any(MapPoint.class))).thenReturn(testMapPoint);
 
     mockMvc.perform(post("/api/map-points")
             .with(SecurityMockMvcRequestPostProcessors.csrf())
             .contentType(MediaType.APPLICATION_JSON)
-            .content(objectMapper.writeValueAsString(testMapPointRequest)))
+            .content(objectMapper.writeValueAsString(testMapPoint)))
         .andExpect(status().isCreated())
         .andExpect(content().contentType(MediaType.APPLICATION_JSON))
-        .andExpect(jsonPath("$.id").value(testMapPointResponse.getId()))
-        .andExpect(jsonPath("$.latitude").value(testMapPointResponse.getLatitude()))
-        .andExpect(jsonPath("$.longitude").value(testMapPointResponse.getLongitude()));
+        .andExpect(jsonPath("$.id").value(testMapPoint.getId()))
+        .andExpect(jsonPath("$.latitude").value(testMapPoint.getLatitude()))
+        .andExpect(jsonPath("$.longitude").value(testMapPoint.getLongitude()));
   }
 
   @Test
@@ -141,25 +124,24 @@ class MapPointControllerTest {
     mockMvc.perform(post("/api/map-points")
             .with(SecurityMockMvcRequestPostProcessors.csrf())
             .contentType(MediaType.APPLICATION_JSON)
-            .content(objectMapper.writeValueAsString(testMapPointRequest)))
+            .content(objectMapper.writeValueAsString(testMapPoint)))
         .andExpect(status().isForbidden());
   }
 
   @Test
   @WithMockUser(roles = "ADMIN")
   void updateMapPoint_WithAdminRole_ShouldUpdateAndReturnMapPoint() throws Exception {
-    when(mapPointService.updateMapPoint(eq(1L), any(UpdateMapPointRequest.class))).thenReturn(
-        testMapPointResponse);
+    when(mapPointService.updateMapPoint(eq(1L), any(MapPoint.class))).thenReturn(testMapPoint);
 
     mockMvc.perform(put("/api/map-points/1")
             .with(SecurityMockMvcRequestPostProcessors.csrf())
             .contentType(MediaType.APPLICATION_JSON)
-            .content(objectMapper.writeValueAsString(testUpdateMapPointRequest)))
+            .content(objectMapper.writeValueAsString(testMapPoint)))
         .andExpect(status().isOk())
         .andExpect(content().contentType(MediaType.APPLICATION_JSON))
-        .andExpect(jsonPath("$.id").value(testMapPointResponse.getId()))
-        .andExpect(jsonPath("$.latitude").value(testMapPointResponse.getLatitude()))
-        .andExpect(jsonPath("$.longitude").value(testMapPointResponse.getLongitude()));
+        .andExpect(jsonPath("$.id").value(testMapPoint.getId()))
+        .andExpect(jsonPath("$.latitude").value(testMapPoint.getLatitude()))
+        .andExpect(jsonPath("$.longitude").value(testMapPoint.getLongitude()));
   }
 
   @Test
