@@ -11,8 +11,8 @@ import static org.springframework.test.web.servlet.request.MockMvcRequestBuilder
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.content;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
-
 import com.fasterxml.jackson.databind.ObjectMapper;
+import java.util.Arrays;
 import java.util.List;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -27,9 +27,6 @@ import org.springframework.test.web.servlet.MockMvc;
 import stud.ntnu.krisefikser.auth.service.CustomUserDetailsService;
 import stud.ntnu.krisefikser.auth.service.TokenService;
 import stud.ntnu.krisefikser.common.TestSecurityConfig;
-import stud.ntnu.krisefikser.map.dto.MapPointTypeRequest;
-import stud.ntnu.krisefikser.map.dto.MapPointTypeResponse;
-import stud.ntnu.krisefikser.map.dto.UpdateMapPointTypeRequest;
 import stud.ntnu.krisefikser.map.entity.MapPointType;
 import stud.ntnu.krisefikser.map.service.MapPointTypeService;
 
@@ -52,14 +49,12 @@ class MapPointTypeControllerTest {
   @Autowired
   private ObjectMapper objectMapper;
 
-  private MapPointTypeResponse testMapPointTypeResponse;
-  private MapPointTypeRequest testMapPointTypeRequest;
-  private UpdateMapPointTypeRequest testUpdateMapPointTypeRequest;
-  private List<MapPointTypeResponse> testMapPointTypeResponses;
+  private MapPointType testMapPointType;
+  private List<MapPointType> testMapPointTypes;
 
   @BeforeEach
   void setUp() {
-    testMapPointTypeResponse = MapPointTypeResponse.builder()
+    testMapPointType = MapPointType.builder()
         .id(1L)
         .title("Test Point Type")
         .iconUrl("http://example.com/icon.png")
@@ -67,72 +62,45 @@ class MapPointTypeControllerTest {
         .openingTime("9:00-17:00")
         .build();
 
-    testMapPointTypeRequest = MapPointTypeRequest.builder()
-        .title("Test Point Type")
-        .iconUrl("http://example.com/icon.png")
-        .description("Test Description")
-        .openingTime("9:00-17:00")
-        .build();
-
-    testUpdateMapPointTypeRequest = UpdateMapPointTypeRequest.builder()
-        .title("Test Point Type")
-        .iconUrl("http://example.com/icon.png")
-        .description("Test Description")
-        .openingTime("9:00-17:00")
-        .build();
-
-    testMapPointTypeResponses = List.of(testMapPointTypeResponse);
+    testMapPointTypes = Arrays.asList(testMapPointType);
   }
 
   @Test
   void getAllMapPointTypes_ShouldReturnList() throws Exception {
-    when(mapPointTypeService.getAllMapPointTypes()).thenReturn(testMapPointTypeResponses);
+    when(mapPointTypeService.getAllMapPointTypes()).thenReturn(testMapPointTypes);
 
     mockMvc.perform(get("/api/map-point-types"))
         .andExpect(status().isOk())
         .andExpect(content().contentType(MediaType.APPLICATION_JSON))
-        .andExpect(jsonPath("$[0].id").value(testMapPointTypeResponse.getId()))
-        .andExpect(jsonPath("$[0].title").value(testMapPointTypeResponse.getTitle()))
-        .andExpect(jsonPath("$[0].iconUrl").value(testMapPointTypeResponse.getIconUrl()));
+        .andExpect(jsonPath("$[0].id").value(testMapPointType.getId()))
+        .andExpect(jsonPath("$[0].title").value(testMapPointType.getTitle()));
   }
 
   @Test
   void getMapPointTypeById_ShouldReturnMapPointType() throws Exception {
-    // Create an entity to be returned by the service
-    MapPointType mapPointType = MapPointType.builder()
-        .id(1L)
-        .title("Test Point Type")
-        .iconUrl("http://example.com/icon.png")
-        .description("Test Description")
-        .openingTime("9:00-17:00")
-        .build();
-
-    // Mock the service to return the entity
-    when(mapPointTypeService.getMapPointTypeById(1L)).thenReturn(mapPointType);
+    when(mapPointTypeService.getMapPointTypeById(1L)).thenReturn(testMapPointType);
 
     mockMvc.perform(get("/api/map-point-types/1"))
         .andExpect(status().isOk())
         .andExpect(content().contentType(MediaType.APPLICATION_JSON))
-        .andExpect(jsonPath("$.id").value(testMapPointTypeResponse.getId()))
-        .andExpect(jsonPath("$.title").value(testMapPointTypeResponse.getTitle()))
-        .andExpect(jsonPath("$.iconUrl").value(testMapPointTypeResponse.getIconUrl()));
+        .andExpect(jsonPath("$.id").value(testMapPointType.getId()))
+        .andExpect(jsonPath("$.title").value(testMapPointType.getTitle()));
   }
 
   @Test
   @WithMockUser(roles = "ADMIN")
   void createMapPointType_WithAdminRole_ShouldCreateAndReturnMapPointType() throws Exception {
-    when(mapPointTypeService.createMapPointType(any(MapPointTypeRequest.class))).thenReturn(
-        testMapPointTypeResponse);
+    when(mapPointTypeService.createMapPointType(any(MapPointType.class))).thenReturn(
+        testMapPointType);
 
     mockMvc.perform(post("/api/map-point-types")
             .with(SecurityMockMvcRequestPostProcessors.csrf())
             .contentType(MediaType.APPLICATION_JSON)
-            .content(objectMapper.writeValueAsString(testMapPointTypeRequest)))
+            .content(objectMapper.writeValueAsString(testMapPointType)))
         .andExpect(status().isCreated())
         .andExpect(content().contentType(MediaType.APPLICATION_JSON))
-        .andExpect(jsonPath("$.id").value(testMapPointTypeResponse.getId()))
-        .andExpect(jsonPath("$.title").value(testMapPointTypeResponse.getTitle()))
-        .andExpect(jsonPath("$.iconUrl").value(testMapPointTypeResponse.getIconUrl()));
+        .andExpect(jsonPath("$.id").value(testMapPointType.getId()))
+        .andExpect(jsonPath("$.title").value(testMapPointType.getTitle()));
   }
 
   @Test
@@ -141,25 +109,24 @@ class MapPointTypeControllerTest {
     mockMvc.perform(post("/api/map-point-types")
             .with(SecurityMockMvcRequestPostProcessors.csrf())
             .contentType(MediaType.APPLICATION_JSON)
-            .content(objectMapper.writeValueAsString(testMapPointTypeRequest)))
+            .content(objectMapper.writeValueAsString(testMapPointType)))
         .andExpect(status().isForbidden());
   }
 
   @Test
   @WithMockUser(roles = "ADMIN")
   void updateMapPointType_WithAdminRole_ShouldUpdateAndReturnMapPointType() throws Exception {
-    when(mapPointTypeService.updateMapPointType(eq(1L), any(UpdateMapPointTypeRequest.class)))
-        .thenReturn(testMapPointTypeResponse);
+    when(mapPointTypeService.updateMapPointType(eq(1L), any(MapPointType.class))).thenReturn(
+        testMapPointType);
 
     mockMvc.perform(put("/api/map-point-types/1")
             .with(SecurityMockMvcRequestPostProcessors.csrf())
             .contentType(MediaType.APPLICATION_JSON)
-            .content(objectMapper.writeValueAsString(testUpdateMapPointTypeRequest)))
+            .content(objectMapper.writeValueAsString(testMapPointType)))
         .andExpect(status().isOk())
         .andExpect(content().contentType(MediaType.APPLICATION_JSON))
-        .andExpect(jsonPath("$.id").value(testMapPointTypeResponse.getId()))
-        .andExpect(jsonPath("$.title").value(testMapPointTypeResponse.getTitle()))
-        .andExpect(jsonPath("$.iconUrl").value(testMapPointTypeResponse.getIconUrl()));
+        .andExpect(jsonPath("$.id").value(testMapPointType.getId()))
+        .andExpect(jsonPath("$.title").value(testMapPointType.getTitle()));
   }
 
   @Test
